--- a/icomoon/style.css
+++ b/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?5f0tjq');
-  src:  url('fonts/icomoon.eot?5f0tjq#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?5f0tjq') format('truetype'),
-    url('fonts/icomoon.woff?5f0tjq') format('woff'),
-    url('fonts/icomoon.svg?5f0tjq#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?2d53ke');
+  src:  url('fonts/icomoon.eot?2d53ke#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?2d53ke') format('truetype'),
+    url('fonts/icomoon.woff?2d53ke') format('woff'),
+    url('fonts/icomoon.svg?2d53ke#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -27,10 +27,10 @@
 .icon-star-60:before {
   content: "\e901";
 }
-.icon-star-202:before {
+.icon-star-20:before {
   content: "\e902";
 }
-.icon-star-20:before {
+.icon-star-16:before {
   content: "\e903";
 }
 .icon-star-10:before {
