--- a/icomoon/style.css
+++ b/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?2d53ke');
-  src:  url('fonts/icomoon.eot?2d53ke#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?2d53ke') format('truetype'),
-    url('fonts/icomoon.woff?2d53ke') format('woff'),
-    url('fonts/icomoon.svg?2d53ke#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?uxgp5i');
+  src:  url('fonts/icomoon.eot?uxgp5i#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?uxgp5i') format('truetype'),
+    url('fonts/icomoon.woff?uxgp5i') format('woff'),
+    url('fonts/icomoon.svg?uxgp5i#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-binary:before {
+  content: "\e906";
+}
 .icon-star-60:before {
   content: "\e901";
 }
