--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,24 @@ span.ten-3 {
 	color: #009900;
 }
 
+#result > span {
+	display: inline-block;
+	position: relative;
+	line-height: 1.25em;
+	overflow: hidden;
+}
+
+#result > span.sep {
+	top: -.25em;
+	margin: -0.25em 0.125em 0 0.125em;
+}
+
+.radix-10 #result > span.sep {
+	top: 0;
+	margin: 0 0.0625em;
+	font-size: 1em;
+}
+
 .radix-10 #radix-logo:before,
 .radix-10 #result {
 	color: #0000cc;
