--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ span.ten-3 {
 	padding:  0.125em;
 }
 
+.radix-12 #base-name,
 .radix-12 #radix-logo:before,
 .radix-12 #result {
 	color: #009900;
@@ -162,39 +163,54 @@ span.ten-3 {
 	margin: -0.25em 0.125em 0 0.125em;
 }
 
+.active-line > div.fraction {
+	position: relative;
+	left: -0.5em;
+}
+
+.active-line > div.fraction > span.sep {
+	top:0.125em;
+	margin:0.125em 0 0 0.125em;
+}
+
+
 .radix-10 .active-line > div > span.sep {
 	top: 0;
 	margin: 0 0.0625em;
 	font-size: 1em;
 }
 
+.radix-10 #base-name,
 .radix-10 #radix-logo:before,
 .radix-10 #result {
 	color: #0000cc;
 }
 
+.radix-16 #base-name,
 .radix-16 #radix-logo:before,
 .radix-16 #result {
 	color: #006699;
 }
 
+.radix-8 #base-name,
 .radix-8 #radix-logo:before,
 .radix-8 #result {
 	color: #990000;
 }
 
+.radix-2 #base-name,
 .radix-2 #radix-logo:before,
 .radix-2 #result {
 	color: #cc5500;
 }
 
-
+.radix-36 #base-name,
 .radix-36 #radix-logo:before,
 .radix-36 #result {
 	color: #999900;
 }
 
-
+.radix-60 #base-name,
 .radix-60 #radix-logo:before,
 .radix-60 #result {
 	color: #cc0099;
@@ -372,6 +388,30 @@ span.ten-3 {
 	transition: opacity 1s ease-in;
 }
 
+.show-pvfracs .active-line > div.fraction,
+.show-rational .active-line > div > span.frac {
+	display: none;
+}
+
+
+
+.show-rational .active-line > div span.zero {
+	display: none;
+}
+
+.show-rational .active-line > div.fraction {
+	font-size: 1.25em;
+	position: relative;
+	top: -0.75em;
+	margin: -0.25em 0.25em 0.25em -1em;
+}
+
+.show-rational .active-line > div.fraction.under-one {
+	font-size: 1.6667em;
+	top: 0;
+	margin: -0.25em 0.25em 0.25em -0.5em;
+}
+
 .show-dec .dec-out {
 	opacity: 1;
 }
@@ -481,11 +521,30 @@ span.ten-3 {
 .rows-10-across .numbers .cell {
 	max-width: 10%;
 }
+
+#base-name,
 .display-control {
 	position: absolute;
 	top: 0.125em;
+}
+
+.display-control {
 	width: 1.5em;
 	font-size: 1.75em;
+}
+
+#base-name {
+	margin-top: 0;
+	font-size: 1.3333em;
+	right: 5.4em;
+	opacity: 1;
+	transition: opacity 0.5s ease-out;
+}
+
+#option-form,
+.show-options #base-name {
+	opacity: 0;
+	pointer-events: none;
 }
 
 #clear-button {
@@ -501,7 +560,7 @@ span.ten-3 {
 	clear:  both;
 	right: 1em;
 	top: 0.5em;
-	padding: 0.25em 2em 0.25 1em;
+	padding: 0.25em 2em 1em 1em;
 }
 
 #option-pane .control {
@@ -509,8 +568,11 @@ span.ten-3 {
 	opacity: 0;
 	transition: opacity 0.5s ease-in;
 	font-size: 0.75em;
-	float: right;
 	margin-right: 1em;
+}
+
+#option-pane div.control {
+	padding:  0.75em 0 0.25em 0;
 }
 
 #option-pane > form {
@@ -518,18 +580,37 @@ span.ten-3 {
 	right: 2em;
 }
 
+
+.fraction > span,
+.fraction > sup,
+.fraction > sub,
 #option-pane .control input,
 #option-pane .control label {
 	display: inline-block;
 }
 
-#option-toggle {
+.option-widget {
 	position: absolute;
 	top: 0;
-	right:0;
 	font-size: 2.5em;
 	color: #999999;
 	transition: all .5s ease-in;
+	cursor: pointer;
+}
+
+#option-toggle {
+	right:0;
+}
+
+#fraction-toggle {
+	right:1.5em;
+	opacity: 1;
+}
+
+.show-options #fraction-toggle {
+	opacity: 0;
+	z-index: -1;
+	pointer-events: none;
 }
 
 #option-toggle:before {
@@ -544,6 +625,24 @@ span.ten-3 {
 	color: #0099ff;
 }
 
+@media screen and (min-width:640px) {
+	#option-pane .radix-control {
+		font-size: 1.25em;
+	}
+}
+
+@media screen and (min-width:960px) {
+	#option-pane .radix-control {
+		font-size: 1.5em;
+	}
+}
+
+@media screen and (min-width:1280px) {
+	#option-pane .radix-control {
+		font-size: 1.6667em;
+	}
+}
+
 .show-options #option-toggle:before {
 	transform: rotate(270deg);
 }
@@ -554,7 +653,14 @@ span.ten-3 {
 }
 
 .show-options #option-pane {
-	min-height: 2em;
+	min-height: 3em;
+}
+
+.show-options #option-form,
+.show-options #option-pane {
+	background-color: white;
+	pointer-events: all;
+	opacity: 1;
 }
 
 .show-options #option-toggle:hover {
